Fix Bugzilla Bug 200746